Add fotos index page

--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -193,8 +193,8 @@
 					</li>
 
 					<li>
-						<a class="mfp-gallery" title="Casa 2" href="images/single-project-01a.jpg">
-							<img src="images/single-project-01.jpg" alt=""/>
+						<a class="mfp-gallery" title="Casa 2" href="fotos/ermita2.JPG">
+							<img src="fotos/ermita2.JPG" alt="grupoermita"/>
 						</a>
 					</li>
 
