--- a/HTML/index.html
+++ b/HTML/index.html
@@ -121,7 +121,7 @@
 
 			<!-- Slide 1 -->
 				<li data-fstransition="fade">
-				<img src="images/alz.jpg" alt="">
+				<img src="fotos/principal.jpg" alt="">
 				<div class="caption text sfb" data-x="0" data-y="170" data-speed="400" data-start="800"><h2>Asociación Grupo Ermita</h2></div>
 				<div class="caption text sfb" data-x="1" data-y="210" data-speed="400" data-start="1000"><h3>Alzheimer De Guatemala </h3></div>
 				<div class="caption text sfb" data-x="1" data-y="266" data-speed="400" data-start="1200"><p>Asociado de Alzheimer’s Disease International<br/> y miembro fundador de la Alzheimer Iberoamericana.</p></div>
@@ -213,8 +213,8 @@
 					<div class="portfolio-item media">
 						<figure>
 							<div class="mediaholder">
-								<a href="images/portfolio/portfolio-01a.jpg" class="mfp-gallery" title="Green Leaves">
-									<img alt="" src="images/portfolio/portfolio-01.jpg"/>
+								<a href="nosotros.html" class="mfp-gallery" title="Casa Doña Rebe">
+									<img alt="Instalaciones" src="fotos/instalaciones.JPG"/>
 									<div class="hovercover">
 										<div class="hovericon"><i class="hoverzoom"></i></div>
 									</div>
@@ -224,7 +224,7 @@
 							<a href="single-project-half.html">
 								<figcaption class="item-description">
 									<h5>Nuestras Instalaciones</h5>
-									<span>Zona 1</span>
+									<span>Casa Doña Rebe</span>
 								</figcaption>
 							</a>
 
@@ -237,8 +237,8 @@
 					<div class="portfolio-item media">
 						<figure>
 							<div class="mediaholder">
-								<a href="images/portfolio/portfolio-02a.jpg" class="mfp-gallery" title="Surfing The Web">
-									<img alt="" src="images/portfolio/portfolio-02.jpg"/>
+								<a href="#" class="mfp-gallery" title="Capacitaciones">
+									<img alt="Capacitaciones" src="fotos/capacitaciones.JPG"/>
 									<div class="hovercover">
 										<div class="hovericon"><i class="hoverzoom"></i></div>
 									</div>
@@ -260,8 +260,8 @@
 					<div class="portfolio-item media">
 						<figure>
 							<div class="mediaholder">
-								<a href="certificacion.html">
-									<img alt="" src="images/portfolio/portfolio-03.jpg"/>
+								<a href="fotos/certificacion.JPG">
+									<img "certificación" src="fotos/certificacion.JPG"/>
 									<div class="hovercover">
 										<div class="hovericon"><i class="hoverlink"></i></div>
 									</div>
@@ -283,8 +283,8 @@
 					<div class="portfolio-item media">
 						<figure>
 							<div class="mediaholder">
-								<a href="single-project-wide.html">
-									<img alt="" src="images/portfolio/portfolio-04.jpg"/>
+								<a href="#">
+									<img alt="familias" src="fotos/familias.JPG"/>
 									<div class="hovercover">
 										<div class="hovericon"><i class="hoverlink"></i></div>
 									</div>
