Edit Nosotros and Certificacion

--- a/HTML/certificacion.html
+++ b/HTML/certificacion.html
@@ -135,7 +135,7 @@
 				<ul class="slides mediaholder">
 
 					<li>
-							<img src="images/galileo.jpg" alt=""/>
+							<img src="fotos/familias.JPG" alt=""/>
 						</a>
 		
 
@@ -153,11 +153,15 @@
 		<!-- Job Description -->
 		<div class="widget" style="margin: 5px 0 0 0;">
 			<h3 class="headline">Certificación Galileo</h3><span class="line"></span><div class="clearfix"></div>
+			<img src="fotos/galileo.png" alt="logo galileo">
 			<p>Universidad Galileo y Asociación Ermita, con el apoyo de la Organización Panamericana de la Salud (OPS), y el Ministerio de Salud, establecieron una alianza estratégica con la finalidad de proporcionar cursos para cuidadores del adulto mayor. <br> <br>El curso prepara a todas aquellas persona que tengan a su cargo la responsabilidad del cuidado de un adulto afectado con esta enfermedad, con el objetivo de brindar la mayor información posible acerca de la enfermedad e identifiquen los recursos disponibles en la comunidad. </p>
 
 			<br>
 
 			Para más información visítalos en 10ª Calle 11-63, zona 1 o vía telefónica a los teléfonos 2220-8256 y 57.
+
+			<br>
+
 		</div>
 
 	</div>
