--- a/HTML/index.html
+++ b/HTML/index.html
@@ -237,10 +237,10 @@
 					<div class="portfolio-item media">
 						<figure>
 							<div class="mediaholder">
-								<a href="#" class="mfp-gallery" title="Capacitaciones">
+								<a href="capacitaciones.html">
 									<img alt="Capacitaciones" src="fotos/capacitaciones.JPG"/>
 									<div class="hovercover">
-										<div class="hovericon"><i class="hoverzoom"></i></div>
+										<div class="hovericon"><i class="hoverlink"></i></div>
 									</div>
 								</a>
 							</div>
@@ -260,7 +260,7 @@
 					<div class="portfolio-item media">
 						<figure>
 							<div class="mediaholder">
-								<a href="fotos/certificacion.JPG">
+								<a href="certificacion.html">
 									<img "certificación" src="fotos/certificacion.JPG"/>
 									<div class="hovercover">
 										<div class="hovericon"><i class="hoverlink"></i></div>
