--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -134,37 +134,6 @@
 		<p>Ermita es el órgano informativo y divulgativo que llevará a sus asociados, público en general pero muy en especial a todas aquellas familias que tengan en su hogar una persona con MAL DE ALZHEIMER o enfermedades relacionadas, las noticias más relevantes que a nivel mundial se vayan conociendo a través de Alzheimer Disease International (ADI).</p>
 	</div>
 
-	<!-- Our Skills -->
-	<div class="one-third column">
-		<h3 class="headline">¡Alguien en quien confiar!</h3><span class="line" style="margin-bottom:35px;"></span><div class="clearfix"></div>
-
-		<div id="skillzz">
-
-			<div class="skill-bar">
-				<span class="skill-title"><i class="icon-shield"></i> Capacitaciones</span>
-				<div class="skill-bar-value" style="width: 100%;"></div>
-			</div>
-	
-			<div class="skill-bar">
-				<span class="skill-title"><i class="icon-html5"></i> Seminarios</span>
-				<div class="skill-bar-value" style="width: 100%;"></div>
-			</div>
-
-
-			<div class="skill-bar">
-				<span class="skill-title"><i class="icon-laptop"></i> Apoyo</span>
-				<div class="skill-bar-value" style="width: 100%;"></div>
-			</div>
-
-			<div class="skill-bar">
-				<span class="skill-title"><i class="icon-puzzle-piece"></i> Comunidad</span>
-				<div class="skill-bar-value" style="width: 100%;"></div>
-			</div>
-
-		</div>
-
-	</div>
-
 </div>
 <!-- Container / End -->
 
@@ -209,7 +178,7 @@
 	<!-- Sidebar -->
 	<div class="five columns">
 		
-		<!-- Job Description -->
+		<!-- Casa Doña Rebe -->
 		<div class="widget" style="margin: 5px 0 0 0;">
 			<h3 class="headline">Grupo Ermita<br> &quotCasa Doña Rebe&quot</h3><span class="line"></span><div class="clearfix"></div>
 			<p>Mauris dictum mauris eget dolor sapien placerat, eu gravida lectus placerat. Fusce dolor sem, auctor non lipsum adipiscing, dignissim non nunc justo varius imperdiet bibendum. Posuere volutpat euismod sed, iaculis quis lectus. Aenean convallis enim urna, nec varius dolor blandit vitae.</p>
@@ -224,6 +193,27 @@
 
 
 <br />
+
+<!-- Asociaciones -->
+<div class="container">
+<div class="two-thirds column">
+	<div class="widget" style="margin: 0px 0 0 0;">
+			<h3 class="headline" >Asociaciones a las cuales pertenecemos</h3><span class="line"></span><div class="clearfix"></div>
+			
+			<ul class="list-3" style="margin: 5px 0 18px 0;">
+				<li>ADI= Alzheimer Disease International</li>
+				<li>ABI= Alzheimer Iberoamerica</li>
+				<li>CONADY= Unidad de Fortalecimiento del Consejo Nacional<br> para la atención con personas de discapacidad</li>
+				<li>PRONAM(SOSEP)= Secretaria de Obras Sociales de la Esposa del Presidente</li>
+				<li>Universidad Galileo</li>
+				<li>COMCAEDA=/li>
+			</ul>
+			<div class="clearfix"></div>
+			
+			<a href="#" class="button color launch">Launch Project</a>
+		</div>
+</div>
+</div>
 
 <!-- Happy Clients
 ================================================== -->
