--- a/HTML/index.html
+++ b/HTML/index.html
@@ -75,18 +75,28 @@
 
 			<li><a href="index.html" id="current">Inicio</a></li>
 
-			<li><a href="nosotros.html">Nosotros</a></li>
+		<li><a href="nosotros.html">Nosotros</a>
+				<ul>
+					<li><a href="nosotros.html">Nosotros</a></li>
+					<li><a href="junta.html">Junta Directiva</a></li>
+				</ul>
+			</li>
 
 			<li><a href="#">Educación</a>
 				<ul>
+					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
 					<li><a href="seminarios.html">Seminarios</a></li>
 					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
-			<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a>
-
+			<li><a href="#">Cuidado</a>
+				<ul>
+					<li><a href="fisioterapia.html">Fisioterapia</a></li>
+					<li><a href="consulta.html">Consulta Médica</a></li>
+				</ul>
+			</li>
 
 			<li><a href="contact.html">Contacto</a></li>
 			
@@ -213,7 +223,7 @@
 					<div class="portfolio-item media">
 						<figure>
 							<div class="mediaholder">
-								<a href="nosotros.html" class="mfp-gallery" title="Casa Doña Rebe">
+								<a href="fotos/instalaciones.JPG" class="mfp-gallery" title="Casa Doña Rebe">
 									<img alt="Instalaciones" src="fotos/instalaciones.JPG"/>
 									<div class="hovercover">
 										<div class="hovericon"><i class="hoverzoom"></i></div>
@@ -301,99 +311,6 @@
 					</div>
 				</li>
 
-				<!-- Item -->
-				<li>
-					<div class="portfolio-item media">
-						<figure>
-							<div class="mediaholder">
-								<a href="images/portfolio/portfolio-05a.jpg" class="mfp-gallery" title="Digital Painting">
-									<img alt="" src="images/portfolio/portfolio-05.jpg"/>
-									<div class="hovercover">
-										<div class="hovericon"><i class="hoverzoom"></i></div>
-									</div>
-								</a>
-							</div>
-
-							<a href="single-project-wide.html">
-								<figcaption class="item-description">
-									<h5>Digital Painting</h5>
-									<span>Technology</span>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</li>
-
-				<!-- Item -->
-				<li>
-					<div class="portfolio-item media">
-						<figure>
-							<div class="mediaholder">
-								<a href="single-project-wide.html">
-									<img alt="" src="images/portfolio/portfolio-06.jpg"/>
-									<div class="hovercover">
-										<div class="hovericon"><i class="hoverlink"></i></div>
-									</div>
-								</a>
-							</div>
-
-							<a href="single-project-wide.html">
-								<figcaption class="item-description">
-									<h5>Music Concert</h5>
-									<span>Architecture</span>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</li>
-
-				<!-- Item -->
-				<li>
-					<div class="portfolio-item media">
-						<figure>
-							<div class="mediaholder">
-								<a href="single-project-half.html">
-									<img alt="" src="images/portfolio/portfolio-07.jpg"/>
-									<div class="hovercover">
-										<div class="hovericon"><i class="hoverlink"></i></div>
-									</div>
-								</a>
-							</div>
-
-							<a href="single-project-half.html">
-								<figcaption class="item-description">
-									<h5>Beautiful Flowers</h5>
-									<span>Photography</span>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</li>
-
-				<!-- Item -->
-				<li>
-					<div class="portfolio-item media">
-						<figure>
-							<div class="mediaholder">
-								<a href="images/portfolio/portfolio-08a.jpg" class="mfp-gallery" title="Mountain Biking">
-									<img alt="" src="images/portfolio/portfolio-08.jpg"/>
-									<div class="hovercover">
-										<div class="hovericon"><i class="hoverzoom"></i></div>
-									</div>
-								</a>
-							</div>
-
-							<a href="single-project-wide.html">
-								<figcaption class="item-description">
-									<h5>Mountain Biking</h5>
-									<span>Photography</span>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</li>
-
-			</ul>
 			<div class="clearfix"></div>
 
 		</div>
