--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -75,18 +75,28 @@
 
 			<li><a href="index.html">Inicio</a></li>
 
-			<li><a href="nosotros.html" id="current">Nosotros</a></li>
+			<li><a href="nosotros.html">Nosotros</a>
+				<ul>
+					<li><a href="nosotros.html">Nosotros</a></li>
+					<li><a href="junta.html">Junta Directiva</a></li>
+				</ul>
+			</li>
 
 			<li><a href="#">Educación</a>
 				<ul>
+					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
 					<li><a href="seminarios.html">Seminarios</a></li>
 					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
-			<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a>
-
+			<li><a href="#">Cuidado</a>
+				<ul>
+					<li><a href="certificacion.html">Fisioterapia</a></li>
+					<li><a href="seminarios.html">Consulta Médica</a></li>
+				</ul>
+			</li>
 
 			<li><a href="contact.html">Contacto</a></li>
 			
@@ -127,11 +137,29 @@
 <!-- Container -->
 <div class="container" style="margin-bottom: 10px;">
 
-	<!-- Who We Are? -->
+	<!-- Qué es Ermita? -->
 	<div class="two-thirds column">
 		<h3 class="headline">¿Qué es Ermita?</h3><span class="line" style="margin-bottom:30px;"></span><div class="clearfix"></div>
 		<p><span class="dropcap">E</span>rmita es una Asociación Guatemalteca, privada, no lucrativa; que desde febrero de 1995 ha venido proporcionando alivio a ancianos, ancianos discapacitados y sobre todo a personas con la enfermedad de Alzheimer y sus familiares</p>
 		<p>Ermita es el órgano informativo y divulgativo que llevará a sus asociados, público en general pero muy en especial a todas aquellas familias que tengan en su hogar una persona con MAL DE ALZHEIMER o enfermedades relacionadas, las noticias más relevantes que a nivel mundial se vayan conociendo a través de Alzheimer Disease International (ADI).</p>
+	</div>
+
+	<!-- ERMITA -->
+	<div class="one-third column">
+		<h3 class="headline">ERMITA</h3><span class="line" style="margin-bottom:35px;"></span><div class="clearfix"></div>
+			<nav class="categories">
+				<ul>
+					<li><a href="#"><b>E</b>rmita</a></li>
+					<li><a href="#"><strong>R</strong>ehabilitación</li>
+					<li><a href="#"><strong>M</strong>edicina</a></li>
+					<li><a href="#"><strong>I</strong>ntegral</a></li>
+					<li><a href="#"><strong>T</strong>ratamiento</a></li>
+					<li><a href="#"><strong>A</strong>lzheimer</a></li>
+				</ul>
+			</nav>
+		</div>
+		
+
 	</div>
 
 </div>
