--- a/HTML/alzheimer.html
+++ b/HTML/alzheimer.html
@@ -77,15 +77,21 @@
 
 			<li><a href="nosotros.html">Nosotros</a></li>
 
-			<li><a href="#">Educación</a>
+		<li><a href="nosotros.html">Educación</a>
 				<ul>
+					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
 					<li><a href="seminarios.html">Seminarios</a></li>
 					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
-			<li><a href="alzheimer.html" id="current">¿Qué es el Alzheimer?</a>
+			<li><a href="#">Cuidado</a>
+				<ul>
+					<li><a href="certificacion.html">Fisioterapia</a></li>
+					<li><a href="seminarios.html">Consulta Médica</a></li>
+				</ul>
+			</li>
 
 
 			<li><a href="contact.html">Contacto</a></li>
