--- a/HTML/seminarios.html
+++ b/HTML/seminarios.html
@@ -75,17 +75,28 @@
 
 			<li><a href="index.html">Inicio</a></li>
 
-			<li><a href="nosotros.html">Nosotros</a></li>
-
-			<li><a href="#" id="current">Educación</a>
+			<li><a href="nosotros.html">Nosotros</a>
 				<ul>
+					<li><a href="nosotros.html">Nosotros</a></li>
+					<li><a href="junta.html">Junta Directiva</a></li>
+				</ul>
+			</li>
+
+			<li><a href="#">Educación</a>
+				<ul>
+					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
 					<li><a href="seminarios.html">Seminarios</a></li>
 					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
-			<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a>
+			<li><a href="#">Cuidado</a>
+				<ul>
+					<li><a href="certificacion.html">Fisioterapia</a></li>
+					<li><a href="seminarios.html">Consulta Médica</a></li>
+				</ul>
+			</li>
 
 
 			<li><a href="contact.html">Contacto</a></li>
