styled pages Junta and Nosotros

--- a/HTML/junta.html
+++ b/HTML/junta.html
@@ -145,21 +145,13 @@
 	<span class="line" style="margin-bottom:35px;"></span>
 	
 
-	<!-- FlexSlider  -->
-	<div class="eleven alt columns">
-		<section class="flexslider post-img">
-			<div class="media">
-				<ul class="slides mediaholder">
 
-					<li>
+	<!-- FlexSlider  -->
+	
 						<a class="mfp-gallery" title="Casa Ermita" href="images/losermitasb.jpg">
-							<img src="images/losermitasa.jpg" alt=""/>
+							<img src="images/losermitasa.jpg" class="imagenjunta"/>
 						</a>
-					</li>
-				</ul>
-			</div>
-		</section>
-	</div>
+
 
 	
 	<!-- Junta Directiva 1a Linea -->
