--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -147,14 +147,14 @@
 	<!-- ERMITA -->
 	<div class="one-third column">
 		<h3 class="headline">ERMITA</h3><span class="line" style="margin-bottom:35px;"></span><div class="clearfix"></div>
-			<nav class="categories">
+			<nav class="significadoermita">
 				<ul>
-					<li><a href="#"><b>E</b>rmita</a></li>
-					<li><a href="#"><strong>R</strong>ehabilitación</li>
-					<li><a href="#"><strong>M</strong>edicina</a></li>
-					<li><a href="#"><strong>I</strong>ntegral</a></li>
-					<li><a href="#"><strong>T</strong>ratamiento</a></li>
-					<li><a href="#"><strong>A</strong>lzheimer</a></li>
+					<li><strong> E</strong>rmita</a></li>
+					<li><strong> R</strong>ehabilitación</li>
+					<li><strong> M</strong>edicina</li>
+					<li><strong> I</strong>ntegral</li>
+					<li><strong> T</strong>ratamiento</li>
+					<li><strong> A</strong>lzheimer</li>
 				</ul>
 			</nav>
 		</div>
@@ -223,7 +223,7 @@
 <br />
 
 <!-- Asociaciones -->
-<div class="container">
+<div class="container espacisimo">
 <div class="two-thirds column">
 	<div class="widget" style="margin: 0px 0 0 0;">
 			<h3 class="headline" >Asociaciones a las cuales pertenecemos</h3><span class="line"></span><div class="clearfix"></div>
