--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -93,7 +93,7 @@
 
 			<li><a href="#">Cuidado</a>
 				<ul>
-					<li><a href="certificacion.html">Fisioterapia</a></li>
+					<li><a href="fisioterapia.html">Fisioterapia</a></li>
 					<li><a href="seminarios.html">Consulta Médica</a></li>
 				</ul>
 			</li>
@@ -184,8 +184,8 @@
 				<ul class="slides mediaholder">
 
 					<li>
-						<a class="mfp-gallery" title="Casa Ermita" href="images/losermitasb.jpg">
-							<img src="images/losermitasa.jpg" alt=""/>
+						<a class="mfp-gallery" title="Casa Ermita" href="fotos/instalaciones.JPG">
+							<img src="fotos/instalaciones.JPG" alt=""/>
 						</a>
 					</li>
 
