--- a/HTML/certificacion.html
+++ b/HTML/certificacion.html
@@ -61,7 +61,7 @@
 		</div>
 
 		<div id="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt="Astrum" /></a></h1>
+			<h1><a href="index.html"><img src="fotos/logo.png" alt="Astrum" /></a></h1>
 		</div>
 	</div>
 
@@ -86,8 +86,6 @@
 				<ul>
 					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
-					<li><a href="seminarios.html">Seminarios</a></li>
-					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
@@ -137,7 +135,20 @@
 <!-- Container -->
 <div class="container">
 
-	<!-- Slider -->
+
+	<!-- Columna Lado -->
+	<div class="five columns">
+		
+		<!-- Descripción Lado -->
+		<div class="widget" style="margin: 5px 0 0 0;">
+			<h3 class="headline">Certificación Galileo</h3><span class="line"></span><div class="clearfix"></div>
+			<img src="fotos/galileo.png" alt="logo galileo">
+			<p>Universidad Galileo y Asociación Ermita, con el apoyo de la Organización Panamericana de la Salud (OPS), y el Ministerio de Salud, establecieron una alianza estratégica con la finalidad de proporcionar cursos para cuidadores del adulto mayor.</p>
+		</div>
+
+	</div>
+
+	<!-- Foto-->
 	<div class="eleven alt columns">
 
 		<!-- FlexSlider  -->
@@ -146,7 +157,7 @@
 				<ul class="slides mediaholder">
 
 					<li>
-							<img src="fotos/familias.JPG" alt=""/>
+							<img src="fotos/galileo.jpg" alt=""/>
 						</a>
 		
 
@@ -157,28 +168,33 @@
 	</div>
 	<!-- Slider / End -->
 	
+	<!-- Sidebar / End-->
 
-	<!-- Sidebar -->
-	<div class="five columns">
-		
-		<!-- Job Description -->
-		<div class="widget" style="margin: 5px 0 0 0;">
-			<h3 class="headline">Certificación Galileo</h3><span class="line"></span><div class="clearfix"></div>
-			<img src="fotos/galileo.png" alt="logo galileo">
-			<p>Universidad Galileo y Asociación Ermita, con el apoyo de la Organización Panamericana de la Salud (OPS), y el Ministerio de Salud, establecieron una alianza estratégica con la finalidad de proporcionar cursos para cuidadores del adulto mayor. <br> <br>El curso prepara a todas aquellas persona que tengan a su cargo la responsabilidad del cuidado de un adulto afectado con esta enfermedad, con el objetivo de brindar la mayor información posible acerca de la enfermedad e identifiquen los recursos disponibles en la comunidad. </p>
+	<!-- Descripción Abajo -->
+	<div class="two-thirds column">
+		<h3 class="headline">Detalles</h3><span class="line" style="margin-bottom:30px;"></span><div class="clearfix"></div>
+		<p>El curso prepara a todas aquellas persona que tengan a su cargo la responsabilidad del cuidado de un adulto afectado con esta enfermedad, con el objetivo de brindar la mayor información posible acerca de la enfermedad e identifiquen los recursos disponibles en la comunidad.</p>
+		<br>
+		<p>Para más información visítalos en 10ª Calle 11-63, zona 1 o vía telefónica a los teléfonos 2220-8256 y 57.</p>
+	</div>
 
-			<br>
-
-			Para más información visítalos en 10ª Calle 11-63, zona 1 o vía telefónica a los teléfonos 2220-8256 y 57.
-
-			<br>
-
+	<!--Capacitación -->
+	<div class="one-third column">
+		<h3 class="headline">Capacitación En:</h3><span class="line" style="margin-bottom:35px;"></span><div class="clearfix"></div>
+			<nav class="significadoermita">
+				<ul class="list-3">
+					<li>Presión Arterial</li>
+					<li>Pulso</li>
+					<li>Respiración</li>
+					<li>Temperatura</li>
+					<li>Observar cambios importantes en el adulto mayor</li>
+				</ul>
+			</nav>
 		</div>
 
-	</div>
-	<!-- Sidebar / End-->
+ <!--Fin Capacitacion -->
 	
-</div>
+	</div>
 <!-- Container / End -->
 
 
