--- a/HTML/familias.html
+++ b/HTML/familias.html
@@ -61,7 +61,7 @@
 		</div>
 
 		<div id="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt="Astrum" /></a></h1>
+			<h1><a href="index.html"><img src="fotos/logo.png" alt="Astrum" /></a></h1>
 		</div>
 	</div>
 
@@ -86,8 +86,6 @@
 				<ul>
 					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
-					<li><a href="seminarios.html">Seminarios</a></li>
-					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
@@ -149,16 +147,9 @@
 
 					<li>
 						<a class="mfp-gallery" title="Steps Upon The Moon's Surface" href="images/single-project-02a.jpg">
-							<img src="images/single-project-02.jpg" alt=""/>
+							<img src="fotos/manos.jpg" alt=""/>
 						</a>
 					</li>
-
-					<li>
-						<a class="mfp-gallery" title="Conrad's Exit From The Lunar Module" href="images/single-project-01a.jpg">
-							<img src="images/single-project-01.jpg" alt=""/>
-						</a>
-					</li>
-
 				</ul>
 			</div>
 		</section>
