--- a/HTML/fisioterapia.html
+++ b/HTML/fisioterapia.html
@@ -61,7 +61,7 @@
 		</div>
 
 		<div id="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt="Astrum" /></a></h1>
+			<h1><a href="index.html"><img src="fotos/logo.png" alt="Astrum" /></a></h1>
 		</div>
 	</div>
 
@@ -86,8 +86,6 @@
 				<ul>
 					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
-					<li><a href="seminarios.html">Seminarios</a></li>
-					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
@@ -211,6 +209,9 @@
 			<p>La Fisioterapia es uno de los tratamientos básicos para ayudar a mejorar la calidad de vida de los pacientes. Puede llegar a tener una gran importancia en el control del dolor que estas patologías causan a los pacientes y en el abordaje de la mayoría de las patologías que pueden aparecer asociadas. </p>
 		</div>
 
+		<br>
+		<br>
+		<br>
 	
 
 </div>
