--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,7 +61,7 @@
 		</div>
 
 		<div id="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt="Ermita" /></a></h1>
+			<h1><a href="index.html"><img src="fotos/logo.png" alt="Ermita" /></a></h1>
 		</div>
 	</div>
 
@@ -86,8 +86,6 @@
 				<ul>
 					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
-					<li><a href="seminarios.html">Seminarios</a></li>
-					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
@@ -226,7 +224,7 @@
 						<figure>
 							<div class="mediaholder">
 								<a href="consulta.html">
-									<img alt="Capacitaciones" src="fotos/capacitaciones.JPG"/>
+									<img alt="Capacitaciones" src="fotos/scopio.jpg"/>
 									<div class="hovercover">
 										<div class="hovericon"><i class="hoverlink"></i></div>
 									</div>
@@ -295,7 +293,7 @@
 						<figure>
 							<div class="mediaholder">
 								<a href="fotos/instalaciones.JPG" class="mfp-gallery" title="Casa Doña Rebe">
-									<img alt="Instalaciones" src="fotos/instalaciones.JPG"/>
+									<img alt="Instalaciones" src="fotos/instalacion.jpg"/>
 									<div class="hovercover">
 										<div class="hovericon"><i class="hoverzoom"></i></div>
 									</div>
