--- a/HTML/junta.html
+++ b/HTML/junta.html
@@ -61,7 +61,7 @@
 		</div>
 
 		<div id="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt="Astrum" /></a></h1>
+			<h1><a href="index.html"><img src="fotos/logo.png" alt="Astrum" /></a></h1>
 		</div>
 	</div>
 
@@ -86,8 +86,6 @@
 				<ul>
 					<li><a href="alzheimer.html">¿Qué es el Alzheimer?</a></li>
 					<li><a href="certificacion.html">Certificación Galileo</a></li>
-					<li><a href="seminarios.html">Seminarios</a></li>
-					<li><a href="capacitaciones.html">Capacitaciones</a></li>
 				</ul>
 			</li>
 
