--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -294,7 +294,7 @@
 			<ul class="get-in-touch">
 				<li ><i class="icon-map-marker"></i> <p><strong>Address:</strong> 120 Seward Street, <br />Oklahoma City, USA</p></li>
 				<li><i class="icon-user"></i> <p><strong>Phone:</strong> +48 880 440 140</p></li>
-				<li><i class="icon-envelope-alt"></i> <p><strong>Email:</strong> <a href="#">mail@example.com</a></p></li>
+				<li><i class="icon-envelope-alt"></i> <p><strong>Email:</strong> <a href="#">marizaacruz@hotmail.com</a></p></li>
 			</ul>
 		</div>
 		
@@ -304,7 +304,7 @@
 			
 			<form action="#" method="get">
 				<button class="newsletter-btn" type="submit">Join</button>
-				<input class="newsletter" type="text" onblur="if(this.value=='')this.value='mail@example.com';" onfocus="if(this.value=='mail@example.com')this.value='';" value="mail@example.com" />
+				<input class="newsletter" type="text" onblur="if(this.value=='')this.value='marizaacruz@hotmail.com';" onfocus="if(this.value=='marizaacruz@hotmail.com')this.value='';" value="marizaacruz@hotmail.com" />
 			</form>
 		</div>
 
