--- a/HTML/fisioterapia.html
+++ b/HTML/fisioterapia.html
@@ -144,7 +144,7 @@
 				<ul class="slides mediaholder">
 
 					<li>
-							<img src="fotos/familias.JPG" alt=""/>
+							<img src="fotos/familias2.JPG" alt=""/>
 						</a>
 		
 
@@ -191,14 +191,14 @@
 <div class="widget" style="margin: 25px 0 0 0;">
 			<h3 class="headline" >Objetivos de la Fisioterapia y Rehabilitación</h3><span class="line"></span><div class="clearfix"></div>
 			
-			<ul class="list-3" style="margin: 5px 0 18px 0;">
+			<ol class="list-3" style="margin: 5px 0 18px 0;">
 				<li>Mejorar las condiciones de los pacientes para la realización de sus actividades de la vida diaria.</li>
 				<li>Paliar al máximo el dolor de los pacientes</li>
 				<li>Mejorar las capacidades físicas de los pacientes.</li>
 				<li>Mejorar el estado psicológico de los pacientes mediante la promoción de actividad física adecuada y la realización de ejercicios</li>
 				<li>Mejorar la higiene postural de los afectados</li>
 				<li>Informar a los pacientes acerca de la patología que sufren.</li>
-			</ul>
+			</ol>
 			<div class="clearfix"></div>
 		</div>
 
@@ -239,7 +239,7 @@
 			<ul class="get-in-touch">
 				<li ><i class="icon-map-marker"></i> <p><strong>Direccion:</strong> 10 Av. &quot;A&quot; 1-48 Zona 1. Guatemala.</p></li>
 				<li><i class="icon-user"></i> <p><strong>Teléfono:</strong> +502 2332 0324</p></li>
-				<li><i class="icon-envelope-alt"></i> <p><strong>Correo:</strong> <a href="#">mail@example.com</a></p></li>
+				<li><i class="icon-envelope-alt"></i> <p><strong>Correo:</strong> <a href="#">marizaacruz@hotmail.com</a></p></li>
 			</ul>
 		</div>
 
@@ -264,7 +264,7 @@
 	<!-- Container -->
 	<div class="container">
 
-		<div class="eight columns" id="nombre">© Hecho por Alejandro e Isabel. All Rights Reserved.</div>
+		<div class="eight columns" id="nombre">© Grupo Ermita 2013. Todos los derechos reservados.</div>
 	
 
 	</div>
