--- a/HTML/alzheimer.html
+++ b/HTML/alzheimer.html
@@ -61,7 +61,7 @@
 		</div>
 
 		<div id="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt="Astrum" /></a></h1>
+			<h1><a href="index.html"><img src="fotos/logo.png" alt="Ermita" /></a></h1>
 		</div>
 	</div>
 
@@ -176,7 +176,7 @@
 	
 	<!-- Sidebar -->
 	<div class="four columns">
-		<a href="contact.html">
+		<a href="mailto:marizaacruz@hotmail.com">
 		<div class="notice-box">
 			<h3>¿Más preguntas?</h3>
 			<i class="icon-envelope" style="margin-top: 5px;"></i>
@@ -281,7 +281,7 @@
 			<ul class="get-in-touch">
 				<li ><i class="icon-map-marker"></i> <p><strong>Dirección:</strong> 10 Av. &quot;A&quot; 1-48 Zona 1. Guatemala.</p></li>
 				<li><i class="icon-user"></i> <p><strong>Teléfono:</strong> +502 2332 0324</p></li>
-				<li><i class="icon-envelope-alt"></i> <p><strong>Correo:</strong> <a href="#">mail@example.com</a></p></li>
+				<li><i class="icon-envelope-alt"></i> <p><strong>Correo:</strong> <a href="#">marizaacruz@hotmail.com</a></p></li>
 			</ul>
 		</div>
 
@@ -304,7 +304,7 @@
 	<!-- Container -->
 	<div class="container">
 
-		<div class="eight columns" id="nombre">© Hecho por Alejandro e Isabel. All Rights Reserved.</div>
+		<div class="eight columns" id="nombre">© Grupo Ermita 2013. Todos los derechos reservados.</div>
 	
 
 	</div>
