--- a/HTML/certificacion.html
+++ b/HTML/certificacion.html
@@ -228,7 +228,7 @@
 			<ul class="get-in-touch">
 				<li ><i class="icon-map-marker"></i> <p><strong>Direccion:</strong> 10 Av. &quot;A&quot; 1-48 Zona 1. Guatemala.</p></li>
 				<li><i class="icon-user"></i> <p><strong>Teléfono:</strong> +502 2332 0324</p></li>
-				<li><i class="icon-envelope-alt"></i> <p><strong>Correo:</strong> <a href="#">mail@example.com</a></p></li>
+				<li><i class="icon-envelope-alt"></i> <p><strong>Correo:</strong> <a href="#">marizaacruz@hotmail.com</a></p></li>
 			</ul>
 		</div>
 
@@ -253,7 +253,7 @@
 	<!-- Container -->
 	<div class="container">
 
-		<div class="eight columns" id="nombre">© Hecho por Alejandro e Isabel. All Rights Reserved.</div>
+		<div class="eight columns" id="nombre">© Grupo Ermita 2013. Todos los derechos reservados.</div>
 	
 
 	</div>
