--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -241,7 +241,7 @@
 
 		<ul class="contact-informations second">
 			<li><i class="icon-user"></i> <p>+502 2332 0324</p></li>
-			<li><i class="icon-envelope-alt"></i> <p>donernesto@grupoermita.com</p></li>
+			<li><i class="icon-envelope-alt"></i> <p>marizaacruz@hotmail.com</p></li>
 		</ul>
 
 	</div>
@@ -275,7 +275,7 @@
 			<ul class="get-in-touch">
 				<li ><i class="icon-map-marker"></i> <p><strong>Dirección:</strong> 10 Av. &quot;A&quot; 1-48 Zona 1. Guatemala.</p></li>
 				<li><i class="icon-user"></i> <p><strong>Teléfono:</strong> +502 2332 0324</p></li>
-				<li><i class="icon-envelope-alt"></i> <p><strong>Correo:</strong> <a href="#">mail@example.com</a></p></li>
+				<li><i class="icon-envelope-alt"></i> <p><strong>Correo:</strong> <a href="#">marizaacruz@hotmail.com</a></p></li>
 			</ul>
 		</div>
 
@@ -298,7 +298,7 @@
 	<!-- Container -->
 	<div class="container">
 
-		<div class="eight columns" id="nombre">© Hecho por Alejandro e Isabel. All Rights Reserved.</div>
+		<div class="eight columns" id="nombre">© Grupo Ermita 2013. Todos los derechos reservados.</div>
 	
 
 	</div>
